# StockDecision

./: .dockerignore  .env.example  .gitignore  README.md  StockDecision.sln  docker-compose.yml
collector/: Dockerfile  README.md  pyproject.toml
collector/scripts/: backfill_candidate_industries_from_cninfo.py  backfill_generic_industries_from_board_members.py
collector/stock_collector/: __init__.py  akshare_client.py  candidate_industry_backfill.py  jobs.py  mysql_writer.py  normalizers.py  orchestrator.py  policies.py
collector/tests/: conftest.py  test_akshare_client.py  test_jobs.py  test_mysql_writer.py  test_normalizers.py  test_orchestrator.py  test_policies.py
docs/stock-decision-system/: 00-overview.md  01-indicator-glossary.md  02-trading-strategy-20k.md  03-data-source-and-fields.md  04-backtest-rules.md  05-learning-and-review.md  06-scoring-and-execution-v2.md  07-scoring-rules-explained.md
src/StockDecision.Api/: Dockerfile  Program.cs  StockDecision.Api.csproj  StockDecision.Api.http  appsettings.json
src/StockDecision.Application/: ApplicationAssemblyMarker.cs  StockDecision.Application.csproj
src/StockDecision.Domain/: DomainAssemblyMarker.cs
src/StockDecision.Infrastructure/: InfrastructureAssemblyMarker.cs  StockDecision.Infrastructure.csproj
tmp/: akshare_financial_bj_probe.py  akshare_market_probe.py  backfill_sh_industries.sql  backfill_sh_industries_failed.txt  backfill_sh_industries_from_cninfo.py  missing_sh_codes.txt  proxy_probe.py
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+82 files in other folders)
