[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-collector"
version = "0.1.0"
description = "Free A-share data collector for the stock decision system"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16.0",
  "PyMySQL>=1.1.0",
  "SQLAlchemy>=2.0.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]
